ms-product/src/main/java/com/example/msproduct/error/ProductAlreadyExistsException.java
package com.example.msproduct.error;

public class ProductAlreadyExistsException extends CommonException{
    public ProductAlreadyExistsException(String errorMessage) {
        super(ErrorCodes.PRODUCT_EXISTS, errorMessage);
    }
}
